[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Vinicius"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
flask = "2.3.0"
flask-sqlalchemy = "3.1.1"
flask-cors = "3.0.10"
werkzeug = "2.3.0"
pytest = "7.4.3"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
